--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
     "react": "^0.14.2",
+    "react-datagrid": "^2.0.2",
     "react-dom": "^0.14.2",
     "react-router": "^1.0.0",
     "request": "^2.65.0",
@@ -22,7 +23,8 @@
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
-    "xml2js": "^0.4.15"
+    "xml2js": "^0.4.15",
+    "sorty": "^1.2.0" 
   },
   "devDependencies": {
     "babel-core": "^6.1.19",
